--- a/.github/workflows/boringssl-version-bump.yml
+++ b/.github/workflows/boringssl-version-bump.yml
@@ -20,7 +20,7 @@ jobs:
           LAST_COMMIT=$(grep boringssl .github/workflows/ci.yml | grep TYPE | grep -oE '[a-z0-9]{40}')
           if ! grep -q "$SHA" .github/workflows/ci.yml; then
             echo "COMMIT_SHA=${SHA}" >> $GITHUB_OUTPUT
-            echo "COMMIT_MSG=\"## BoringSSL\n[Commit: ${SHA}](https://boringssl.googlesource.com/boringssl/+/${COMMIT_SHA})\n\n[Diff](https://boringssl.googlesource.com/boringssl/+/${LAST_COMMIT}..${SHA}) between the last commit hash merged to this repository and the new commit.\"" >> $GITHUB_OUTPUT
+            echo -e "COMMIT_MSG=\"## BoringSSL\n[Commit: ${SHA}](https://boringssl.googlesource.com/boringssl/+/${COMMIT_SHA})\n\n[Diff](https://boringssl.googlesource.com/boringssl/+/${LAST_COMMIT}..${SHA}) between the last commit hash merged to this repository and the new commit.\"" >> $GITHUB_OUTPUT
           fi
       - id: check-sha-openssl
         run: |
