--- a/.github/workflows/boringssl-version-bump.yml
+++ b/.github/workflows/boringssl-version-bump.yml
@@ -17,7 +17,7 @@ jobs:
       - id: check-sha-boring
         run: |
           SHA=$(git ls-remote https://boringssl.googlesource.com/boringssl refs/heads/master | cut -f1)
-          LAST_COMMIT=$(grep boringssl .github/workflows/ci.yml | grep TYPE | grep -oE '[a-z0-9]{40}')
+          LAST_COMMIT=$(grep boringssl .github/workflows/ci.yml | grep TYPE | grep -oE '[a-f0-9]{40}')
           if ! grep -q "$SHA" .github/workflows/ci.yml; then
             echo "COMMIT_SHA=${SHA}" >> $GITHUB_OUTPUT
             echo -e "COMMIT_MSG=\"## BoringSSL\n[Commit: ${SHA}](https://boringssl.googlesource.com/boringssl/+/${COMMIT_SHA})\n\n[Diff](https://boringssl.googlesource.com/boringssl/+/${LAST_COMMIT}..${SHA}) between the last commit hash merged to this repository and the new commit.\"" >> $GITHUB_OUTPUT
@@ -25,10 +25,10 @@ jobs:
       - id: check-sha-openssl
         run: |
           SHA=$(git ls-remote https://github.com/openssl/openssl refs/heads/master | cut -f1)
-          LAST_COMMIT=$(grep openssl .github/workflows/ci.yml | grep TYPE | grep -oE '[a-z0-9]{40}')
+          LAST_COMMIT=$(grep openssl .github/workflows/ci.yml | grep TYPE | grep -oE '[a-f0-9]{40}')
           if ! grep -q "$SHA" .github/workflows/ci.yml; then
             echo "COMMIT_SHA=${SHA}" >> $GITHUB_OUTPUT
-            echo "COMMIT_MSG=\"## OpenSSL\n[Commit: ${SHA}](https://github.com/openssl/openssl/commit/${COMMIT_SHA})\n\n[Diff](https://github.com/openssl/openssl/compare/${LAST_COMMIT}..${SHA}) between the last commit hash merged to this repository and the new commit.\"" >> $GITHUB_OUTPUT
+            echo -e "COMMIT_MSG=\"## OpenSSL\n[Commit: ${SHA}](https://github.com/openssl/openssl/commit/${COMMIT_SHA})\n\n[Diff](https://github.com/openssl/openssl/compare/${LAST_COMMIT}..${SHA}) between the last commit hash merged to this repository and the new commit.\"" >> $GITHUB_OUTPUT
           fi
       - name: Update boring
         run: |
